FR# 26194, datum matrix column order.
SVN-Revision: 17776